# tulog-biowatch-tzt

./: .gitignore  CLAUDE.md  CMakeLists.txt  IO-pin-plan.md  README.md  ads1293.md  biosignals_plan.md  button_fixes.md  migration_plan.md  partitions.csv  plot_signals.py  screen_solve.md  sdkconfig.defaults
.claude/: settings.json
docs/: MAX30102.md  SIGNAL_PROCESSING.md  ads1293.md  apnea_plan.md  bp_screen_plan.md  crash-fix-plan.md  files_screen_transfer_plan.md  mpu-6050-6500.md  pc_receiver_stage_plan.md  refactor-plan.md  watch_apnea_detection_method.md
main/: CMakeLists.txt  app_config.h  app_state.h  idf_component.yml  main.c
main/hal/: hal_ads1293.c  hal_ads1293.h  hal_ads1293_regs.h  hal_backlight.c  hal_backlight.h  hal_battery.c  hal_battery.h  hal_bus.c  hal_bus.h  hal_display.c  hal_display.h  hal_max30102.c  hal_max30102.h  hal_mpu6050.c  hal_mpu6050.h  hal_storage.c  hal_storage.h  hal_touch.c  hal_touch.h
main/services/: svc_biosignal_acq.c  svc_biosignal_acq.h  svc_bp_record.c  svc_bp_record.h  svc_files.c  svc_files.h  svc_nvs.c  svc_nvs.h  svc_record.c  svc_record.h  svc_time.c  svc_time.h
main/signal/: sig_pipeline.c  sig_pipeline.h  sig_ppg.c  sig_ppg.h
main/ui/: ui_common.c  ui_common.h
pc_receiver/: .gitignore  classifiers.py  config.py  file_index.py  receiver.py  requirements.txt
pc_receiver/analysis/: __init__.py  apnea_pipeline.py  bp_hrv_bpv.py  correlation.py  ecg_processing.py  intersection_detector.py  physio_markers.py  signal_processing.py  visualisation.py
pc_receiver/docs/: Apnea_code_all_databases.m  (+1 more)
